/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.shared.spec;

import "src/java/com/google/wireless/qa/mobileharness/shared/proto/spec/base_spec.proto";

option java_package = "com.google.wireless.qa.mobileharness.shared.proto.spec.decorator";
option java_multiple_files = true;

// Specs for {@link AndroidFilePullerDecorator}.
// Next tag:
message AndroidFilePullerDecoratorSpec {
  extend DecoratorSpec {
    optional AndroidFilePullerDecoratorSpec ext = 242932780;
  }

  optional string file_path_on_device = 1 [
    (field_detail) = { help: "Comma separated paths of gen files on device." }
  ];

  optional bool remove_files_before_test = 2 [
    default = true,
    (field_detail) = {
      help: "Whether to delete files in file_path_on_device if they exist "
            "before the test."
    }
  ];

  optional bool skip_pulling_non_exist_files = 3 [
    default = true,
    (field_detail) = {
      help: "Whether to ignore errors when files don't exist."
    }
  ];

  optional bool ignore_pulling_exist_files_error = 4 [
    default = true,
    (field_detail) = {
      help: "Whether to ignore errors when pulling existing files."
    }
  ];
}
